--- a/fragment-binder/src/main/AndroidManifest.xml
+++ b/fragment-binder/src/main/AndroidManifest.xml
@@ -1,3 +1,3 @@
-<manifest package="nullptr2this.android.app.binder"
+<manifest package="io.github.nullifythis.android.app.binder"
           xmlns:android="http://schemas.android.com/apk/res/android"
           android:versionName="0.0.1"/>
